tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__EntTwig-AAAAAAAAAAAAAAAAAAAJIg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2338,
  "prerequisites": [
    1557
  ],
  "properties": {
    "auto_claim": false,
    "desc": "An Ent Twig is dropped when an Ent is killed, which can be used to craft Mutating Sprigs and Mystic Branches.\n\nEnts will appear occasionally when trees such as Rowan, Hawthorn and Alder are felled in large quantities.\n\nThey are rather hard to kill by normal means, but they do have a healthy hatred of certain tools for some reason or another.\n\nThey can also drop a Twilight Forest Moss Patch or Biomes O' Plenty Moss.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Ent Twig",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1557
  ],
  "rewards": [],
  "tasks": []
}
