tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__ExhaleoftheHorne-AAAAAAAAAAAAAAAAAAAGEg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1554,
  "prerequisites": [
    332
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Exhale of the Horned One is an ingredient used in many recipes. It is acquired with a random chance when burning Oak saplings in an oven.\n\nYou'll also get Wood Ash when burning saplings. It's useful, don't toss it.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Exhale of the Horned One",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    332
  ],
  "rewards": [],
  "tasks": []
}
