tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__FlameImp-AAAAAAAAAAAAAAAAAAAJKw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2347,
  "prerequisites": [
    1574,
    2334
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Flame Imps are demons strongly associated with fiery magic.\n\nNot as physically strong as their dimmer cousins, Flame Imps are mischievous creatures who are very easily swayed with the promise of personal gain. They may even be bound into the service of a witch (or warlock) if the offer is good enough.\n\nFlame Imps are summoned using a Rite of Summoning, and they are most likely to attack the first person they see. It is advisable to make a deal with them quickly.\n\nMaking a deal\n\nTo bind a Flame Imp into service, a witch must write the agreement into a Demonic Contract and sign it with their own blood (craft with a Taglock Kit).\nThis contract must then be given to the Flame Imp, who will require a down-payment of Experience Levels (typically 25).\n\nOnce a deal is struck, the imp will be bound to the location of the deal, not able to wander too far away. The Imp will attack anyone hostile to its master.\n\nImps like receiving valuable gifts, once suitably impressed an imp may be prepared to perform various flame related spells at the request of their master.\n\nSpells take the form of contracts describing what must be done and to whom.\nSimply craft a Demonic Contract with the necessary components and then the resulting contract with a taglock.\nThen give the contract to the Imp. So long as the creature is in the same dimension, the magic will take hold.\n\nA Flame imp may also occasionally give a gift in return for being given valuable things. These have been known to include the souls of demons that can be consumed to allow a witch to cast demonic spells.\n\nA very well treated Flame Imp may even yield knowledge to summon a Lord of Torment.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Flame Imp",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1574,
    2334
  ],
  "rewards": [],
  "tasks": []
}
